# clipper

./: LICENSE  README.md  pyproject.toml
clipgen/: __init__.py  asr.py  candidates.py  cli.py  config.py  export.py  face.py  input.py  logging.py  pipeline.py  probe.py  render.py  scoring.py  speaker.py  subtitles.py  transcode.py  utils.py  vad.py
configs/: bundle_3x3_high_quality.yaml
schemas/: clip_meta.schema.json  export_plan.schema.json
tests/: test_overlap.py  test_scoring.py  test_selection.py  test_subtitles.py
