[project]
name = "clipgen"
version = "0.1.0"
description = "CLI tool to generate platform-specific short clips from long-form video."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Clipper"}]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.1",
  "PyYAML>=6.0.1",
  "rich>=13.7.1",
  "tqdm>=4.66.4",
  "numpy>=1.26.4",
  "scipy>=1.13.0",
  "opencv-python>=4.9.0.80",
  "mediapipe>=0.10.14",
  "faster-whisper>=1.0.3",
  "torch>=2.3.0",
  "silero-vad>=5.1.2",
]

[project.scripts]
clipgen = "clipgen.cli:app"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
  "integration: integration smoke tests",
]

[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"
