[project]
name = "clipgen"
version = "0.1.0"
description = "CLI tool to generate short-form clips from long-form videos."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Clipgen Contributors" }]
dependencies = [
  "typer>=0.12.3",
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.0",
  "rich>=13.7.1",
  "tqdm>=4.66.4",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "opencv-python>=4.9.0",
  "mediapipe>=0.10.9",
  "faster-whisper>=1.0.3",
  "silero-vad>=0.4.0",
  "soundfile>=0.12.1",
]

[project.scripts]
clipgen = "clipgen.cli:app"

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = ["integration: integration tests that require large assets"]

[tool.ruff]
line-length = 100
